AccuRev SCM related info added

--- a/Supported-Revision-Control-Systems.mediawiki
+++ b/Supported-Revision-Control-Systems.mediawiki
@@ -115,6 +115,14 @@ OpenGrok supports a lot of different source code repositories. Since not all rep
 |Y
 |n/i
 |N
+|-
+|Accurev
+|Y
+|Y
+|Y
+|Y
+|N
+|N
 |}
 
 === Legend ===
