Public OpenGrok link was dead, I found actively indexed public one (0.11-rc2) http://bxr.su/ and edited the wiki page

--- a/Story-of-OpenGrok.mediawiki
+++ b/Story-of-OpenGrok.mediawiki
@@ -174,7 +174,7 @@ Early this year it was deployed to host the OpenSolaris source code on http://cv
 
 Before being considered for OpenSolaris it was just a program written for my own use. If it is going to be deployed for OpenSolaris, and publicly available, there will be hundreds of people and robots hitting it all the time. It had to be secure, fast and efficient and well as usable. OpenGrok then aimed to be a complete integrated and usable solution to source code search and browsing.
 
-The secret behind OpenGrok is the principle "make the common case faster and easier". Call it Chandan's law. (Since Google says I am the first one to say so!). It combines a fundamental principle in Computer Architecture (i.e "//make the common case fast//" (also known as [http://en.wikipedia.org/wiki/Amdahl's_law Amdahl's law]) with a fundamental principle in Human Computer Interaction (i.e "//make the common case easier//"). To build your software pick the best tools available like Lucene and Java. The result is what you now see on http://src.opensolaris.org/source/. Believe me, it takes lot more effort to make things simple than to make things complicated.
+The secret behind OpenGrok is the principle "make the common case faster and easier". Call it Chandan's law. (Since Google says I am the first one to say so!). It combines a fundamental principle in Computer Architecture (i.e "//make the common case fast//" (also known as [http://en.wikipedia.org/wiki/Amdahl's_law Amdahl's law]) with a fundamental principle in Human Computer Interaction (i.e "//make the common case easier//"). To build your software pick the best tools available like Lucene and Java. The result is what you now see on http://bxr.su/ . Believe me, it takes lot more effort to make things simple than to make things complicated.
 
 There are more smaller features and attention to detail that make big difference in usability and speed.
 
