--- a/tools/sync/README
+++ b/tools/sync/README
@@ -23,3 +23,6 @@ done.
 For per-project reindexing to work properly, reindex-project.ksh uses
 the logging.properties.template to make sure each project has its own
 log directory.
+
+See https://github.com/OpenGrok/OpenGrok/wiki/Per-project-management
+for more details on per-project management.
