Add recently-added languages

--- a/Supported-Languages-and-Formats.mediawiki
+++ b/Supported-Languages-and-Formats.mediawiki
@@ -7,6 +7,10 @@ The following table lists all supported formats and OpenGrok version in which th
 |'''Version'''
 |'''File suffixes'''
 |-
+|Ada
+|1.1
+|"ADA","ADB","ADS"
+|-
 |bzip2
 |0.3.1
 |"BZ","BZ2"
@@ -22,6 +26,10 @@ The following table lists all supported formats and OpenGrok version in which th
 |C#
 |0.11
 |CS
+|-
+|Clojure
+|0.XXX
+|"CLJ","CLJS","CLJX"
 |-
 |ELF
 |0.XXX
@@ -68,13 +76,25 @@ The following table lists all supported formats and OpenGrok version in which th
 |0.11
 |"JS"
 |-
+|Kotlin
+|1.1
+|"KT","KTS"
+|-
 |Lisp
 |0.XXX
 |"LISP","LSP","EL","SCM"
 |-
+|Lua
+|1.XXX
+|"LUA"
+|-
+|Pascal
+|1.XXX
+|"PAS"
+|-
 |Perl
 |0.10
-|"PL","PERL","PM"
+|"PL","PLX","PERL","PH","PM"
 |-
 |PHP
 |0.11
@@ -84,9 +104,21 @@ The following table lists all supported formats and OpenGrok version in which th
 |0.XXX
 |
 |-
+|PowerShell
+|1.1
+|"PS1","PSM1"
+|-
 |Python
 |0.10
 |"PY"
+|-
+|Ruby
+|1.1
+|"RB","RUBY"
+|-
+|Rust
+|1.XXX
+|"RS"
 |-
 |Scala
 |0.12
@@ -103,6 +135,10 @@ The following table lists all supported formats and OpenGrok version in which th
 |PLSQL
 |0.12
 |"PLS","PKS","PLD","PLB","PKB","PCK"
+|-
+|Swift
+|1.1
+|"SWIFT"
 |-
 |tar
 |0.3.1
