Fix dangling VB span by subclassing JFlexXrefSimple
Also:
- Fix to recognize proper VB escaping of quotation-marks.
- Fix to close and reopen spans for line-spanning strings.
- Escape all HTML special characters in VBXref.
- Use Common.xref in VBSymbolTokenizer.

--- a/test/org/opensolaris/opengrok/analysis/vb/sample.cls
+++ b/test/org/opensolaris/opengrok/analysis/vb/sample.cls
@@ -429,3 +429,9 @@ Private Sub Class_Initialize()
     Set Headers = New Collection
     Set Cookies = New Collection
 End Sub
+
+Private Sub Test_strings()
+    Dim foo1() As String
+    Set foo1 = " testing    
+    1-2-3"
+End Sub
